--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Ramírez P​laza​, Conócenos​, Tiendas Funcionando, Leori Store​, Heladería Frida​, Estética Mirella​, Contáctenos">
     <meta name="description" content="">
-    <title>Casa</title>
+    <title>Ramírez Plaza</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
